# mowing_robot_bt

./: .gitignore  CMakeLists.txt  README.md  package.xml
IPM_calibration/: classes.txt  notes.json
IPM_calibration/labels/: thermal_image_2025-02-17_13-21-13_000004.txt  thermal_image_2025-02-17_13-21-13_000009.txt  thermal_image_2025-02-17_13-21-13_000016.txt  thermal_image_2025-02-17_13-21-13_000024.txt  thermal_image_2025-02-17_13-21-13_000031.txt  thermal_image_2025-02-17_13-21-13_000038.txt  thermal_image_2025-02-17_13-21-13_000045.txt  thermal_image_2025-02-17_13-21-13_000053.txt  thermal_image_2025-02-17_13-21-13_000061.txt  thermal_image_2025-02-17_13-21-13_000071.txt  thermal_image_2025-02-17_13-21-13_000080.txt  thermal_image_2025-02-17_13-21-13_000089.txt  thermal_image_2025-02-17_13-21-13_000096.txt  thermal_image_2025-02-17_13-21-13_000105.txt  thermal_image_2025-02-17_13-21-13_000114.txt  thermal_image_2025-02-17_13-21-13_000122.txt
config/: nav2_params.yaml
demo_image/: thermal_image_2024-11-26_13-34-52_000142.tiff
demo_images/: thermal_image_2024-11-26_13-28-07_000104.tiff
include/: add_obstacle.hpp  check_collision_free_ccp_path_available.hpp  check_image_data.hpp  complete_coverage_path.hpp  creature_detection.hpp  update_ccp_map.hpp
launch/: CreatureDetection.launch.py  simulation.launch.py  tb3_simulation_launch.py
scripts/: IPM.py  IPM_calibration.py  NeuralNet.py  static_tf2_publisher.py
src/: add_obstacle.cpp  check_collision_free_ccp_path_available.cpp  check_image_data.cpp  complete_coverage_path.cpp  creature_detection.cpp  main.cpp  update_ccp_map.cpp
test_image/: thermal_image_2024-11-26_13-28-07_000460.tiff
test_video/: thermal_image_2024-11-26_13-22-10_000021.tiff  thermal_image_2024-11-26_13-22-10_000045.tiff  thermal_image_2024-11-26_13-22-10_000046.tiff  thermal_image_2024-11-26_13-22-10_000047.tiff  thermal_image_2024-11-26_13-22-10_000056.tiff  thermal_image_2024-11-26_13-22-10_000058.tiff  thermal_image_2024-11-26_13-22-10_000065.tiff  thermal_image_2024-11-26_13-22-10_000084.tiff  thermal_image_2024-11-26_13-22-10_000094.tiff  thermal_image_2024-11-26_13-22-10_000095.tiff  thermal_image_2024-11-26_13-22-10_000115.tiff  thermal_image_2024-11-26_13-22-10_000129.tiff  thermal_image_2024-11-26_13-22-10_000130.tiff  thermal_image_2024-11-26_13-22-10_000136.tiff  thermal_image_2024-11-26_13-22-10_000148.tiff  thermal_image_2024-11-26_13-22-10_000150.tiff  thermal_image_2024-11-26_13-22-10_000152.tiff  thermal_image_2024-11-26_13-22-10_000157.tiff  thermal_image_2024-11-26_13-22-10_000166.tiff  thermal_image_2024-11-26_13-22-10_000171.tiff  thermal_image_2024-11-26_13-22-10_000178.tiff  thermal_image_2024-11-26_13-22-10_000188.tiff  thermal_image_2024-11-26_13-22-10_000190.tiff  thermal_image_2024-11-26_13-22-10_000193.tiff  thermal_image_2024-11-26_13-22-10_000195.tiff  thermal_image_2024-11-26_13-22-10_000203.tiff  thermal_image_2024-11-26_13-22-10_000205.tiff  thermal_image_2024-11-26_13-22-10_000211.tiff  thermal_image_2024-11-26_13-22-10_000213.tiff  thermal_image_2024-11-26_13-22-10_000214.tiff  thermal_image_2024-11-26_13-22-10_000216.tiff  thermal_image_2024-11-26_13-22-10_000219.tiff  thermal_image_2024-11-26_13-22-10_000220.tiff  thermal_image_2024-11-26_13-22-10_000226.tiff  thermal_image_2024-11-26_13-22-10_000229.tiff  thermal_image_2024-11-26_13-22-10_000236.tiff  thermal_image_2024-11-26_13-22-10_000239.tiff  thermal_image_2024-11-26_13-22-10_000243.tiff  thermal_image_2024-11-26_13-22-10_000251.tiff  thermal_image_2024-11-26_13-22-10_000265.tiff  (+316 more)
trees/: mowing_robot_bt.xml  mowing_robot_bt_ports.xml
waypoints/: waypoints.yaml  waypoints_more.yaml
