<?xml version="1.0"?>
<package format="3">
  <name>mowing_robot_bt</name>
  <version>0.0.1</version>
  <description>Behavior Tree package for the mowing robot.</description>

  <maintainer email="denis.trescher@gmail.com">Denis Trescher</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rclpy</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <launch>
      <launch_file>start_mowing_robot.launch.py</launch_file>
    </launch>
  </export>
</package>
